--- a/stylesheets/base/css/_keyframes.css
+++ b/stylesheets/base/css/_keyframes.css
@@ -76,5 +76,11 @@
 @keyframes icon-effect { 0% { opacity: 0; }
   50% { opacity: 1; }
   100% { opacity: 0; } }
+@-webkit-keyframes shopbag-letter { 0% { -webkit-transform: translate(0, 100%); }
+  100% { -webkit-transform: translate(0, 0); } }
+@-moz-keyframes shopbag-letter { 0% { -moz-transform: translate(0, 100%); }
+  100% { -moz-transform: translate(0, 0); } }
+@keyframes shopbag-letter { 0% { transform: translate(0, 100%); }
+  100% { transform: translate(0, 0); } }
 
 /*# sourceMappingURL=_keyframes.css.map */
