--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -164,9 +164,12 @@ body { width: 100%; overflow-x: hidden; }
 .container-cost .cost-wrapper .cost-tab .cost-tab__choose span { font-size: 1.15rem; color: #2ac6ff; padding: 1rem 4rem; border-radius: 5rem; border: 1px solid #2ac6ff; background-color: transparent; cursor: pointer; }
 .container-cost .cost-wrapper .cost-tab .cost-tab__choose span:hover { background-color: #2ac6ff; color: white; }
 .container-cost .cost-final { width: 30%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; text-align: right; }
-.container-cost .cost-final .cost-final__list { width: 100%; margin-top: 2rem; font-family: 'NanumSquare', sans-serif; color: #606060; font-size: 1.15rem; line-height: 1.8; }
-.container-cost .cost-final .cost-final__result { width: 100%; margin-top: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; text-align: right; }
+.container-cost .cost-final .cost-final__list { width: 90%; margin-top: 2rem; font-family: 'NanumSquare', sans-serif; color: #606060; font-size: 1.15rem; line-height: 1.8; margin-left: 10%; }
+.container-cost .cost-final .cost-final__result { width: 90%; margin-top: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; text-align: right; border-bottom: 1px solid #a5a5a5; margin-left: 10%; }
 .container-cost .cost-final .cost-final__result .result-title { font-family: 'NanumSquare', sans-serif; color: #606060; font-size: 2.5rem; }
-.container-cost .cost-final .cost-final__result .result-money { font-family: 'TmonMonsori'; color: #2ac6ff; margin-top: 1rem; font-size: 4.5rem; }
+.container-cost .cost-final .cost-final__result .result-money { font-family: 'TmonMonsori'; color: #2ac6ff; margin-top: 1rem; font-size: 4.5rem; margin-bottom: 1rem; }
+.container-cost .cost-final .cost-final__next { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 10%; margin-top: 2rem; }
+.container-cost .cost-final .cost-final__next .next-reset { width: 20%; margin-right: 2%; color: white; background-color: #606060; padding: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; }
+.container-cost .cost-final .cost-final__next .next-step { width: 78%; color: #2b2b2b; background-color: #f7ff5a; padding: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; }
 
 /*# sourceMappingURL=class.css.map */
