--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -19,11 +19,11 @@ body { width: 100%; overflow-x: hidden; }
 .header .gnb .wave-tab a span { color: white; font-family: 'NanumSquare', sans-serif; font-weight: 800; font-size: 1.35rem; letter-spacing: 0.1rem; }
 .header .gnb .wave-tab a img { height: 1.6rem; width: auto; margin-left: 7px; }
 .header .nav-mobile { display: none; }
-.header .logo { position: absolute; background: #fffaa7; background: -moz-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: -webkit-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); width: 16.645%; height: 170px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; top: 0; left: 85px; z-index: 9999; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.header .logo { position: absolute; background: #fffaa7; background: -moz-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: -webkit-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); width: 11vw; height: 170px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; top: 0; left: 85px; z-index: 9999; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .logo:hover { -webkit-box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); }
 .header .logo .logo-symbol { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.header .logo .logo-symbol img { width: 40%; margin-top: 2.5rem; }
+.header .logo .logo-symbol img { width: 48%; margin-top: 20%; }
 .header .logo .logo-title { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.header .logo .logo-title img { width: 40%; margin-bottom: 2.5rem; }
+.header .logo .logo-title img { width: 48%; margin-bottom: 20%; }
 
 /*# sourceMappingURL=header.css.map */
