--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -1,8 +1,89 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700");
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
-@font-face { font-family: 'Lachata'; src: url("../../font/Lachata.ttf.eot") format("embedded-opentype"); src: url("../../font/Lachata.ttf.eot?#iefix") format("embedded-opentype"), url("../../font/Lachata.ttf.woff") format("woff"); font-weight: normal; font-style: normal; }
-html { font-size: 12px; }
+@import url("https://fonts.googleapis.com/css?family=Teko:600");
+@font-face { font-family: 'TmonMonsori'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff") format("woff"); font-weight: normal; font-style: normal; }
+html { font-size: 12px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; text-rendering: optimizeLegibility; }
 
 body { width: 100%; overflow-x: hidden; }
+
+.header .gnb .gnb-list .gnb-tab:nth-of-type(3) a span { color: #2ac6ff; }
+.header .gnb .gnb-list .gnb-tab:nth-of-type(3):hover a span { color: white; }
+
+.jumbotron { width: 100%; height: 24rem; overflow: hidden; position: relative; }
+.jumbotron .jumbotron-img { width: 100%; height: 100%; position: relative; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.jumbotron .jumbotron-img img { width: 100%; }
+.jumbotron .jumbotron-img:after { content: ''; width: 100%; height: 100%; background-color: rgba(43, 43, 43, 0.7); position: absolute; top: 0; left: 0; }
+.jumbotron .jumbotron-title { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.jumbotron .jumbotron-title img { height: 3.2rem; width: auto; }
+.jumbotron .jumbotron-title p { font-size: 2rem; color: white; font-family: 'NanumSquare', sans-serif; text-align: center; width: 40%; margin-top: 1.5rem; word-break: keep-all; }
+
+.container { width: 100%; position: relative; }
+.container .search-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 3% 10%; border-bottom: 1px solid #eaeaea; position: relative; }
+.container .search-wrapper .search-title { width: 50%; }
+.container .search-wrapper .search-title p { font-size: 3.5rem; line-height: 1.5; font-family: 'NanumSquare', sans-serif; color: #606060; }
+.container .search-wrapper .search-date { width: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
+.container .search-wrapper .search-date .search-date__input { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 60%; margin-left: 2rem; }
+.container .search-wrapper .search-date .search-date__input .date-input { width: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .search-wrapper .search-date .search-date__input .date-input input { width: 3.5em; height: 4rem; border: 1px solid #eaeaea; font-size: 2rem; line-height: 3rem; border-radius: 5px; margin-right: 1rem; text-align: center; color: #606060; }
+.container .search-wrapper .search-date .search-date__input .date-input span { font-size: 2.5rem; color: #606060; }
+.container .search-wrapper .search-date .search-date__btn { width: 38%; margin-left: 2%; }
+.container .search-wrapper .search-date .search-date__btn span { color: #2b2b2b; font-size: 1.35rem; padding: 1.35rem 4rem; border-radius: 5rem; background-color: #f7ff5a; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; cursor: pointer; }
+.container .search-wrapper .search-date .search-date__btn span:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
+.container .rent-wrapper { width: 100%; margin-top: 5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
+.container .rent-wrapper .rent-category { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; }
+.container .rent-wrapper .rent-category .category-tab { width: 17%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-bottom: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 1%; cursor: pointer; }
+.container .rent-wrapper .rent-category .category-tab.current { border-bottom: 1px solid #2ac6ff; }
+.container .rent-wrapper .rent-category .category-tab.current .category-tab__title { color: #2ac6ff; }
+.container .rent-wrapper .rent-category .category-tab.current .category-tab__icon { color: #2ac6ff; }
+.container .rent-wrapper .rent-category .category-tab .category-tab__title { width: 80%; text-align: center; color: #a5a5a5; font-size: 1.35rem; }
+.container .rent-wrapper .rent-category .category-tab .category-tab__icon { width: 20%; color: #a5a5a5; font-size: 1.35rem; text-align: center; }
+.container .rent-wrapper .rent-color { width: 100%; margin-top: 4rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; position: relative; }
+.container .rent-wrapper .rent-color .color-tab { width: 4rem; height: 4rem; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border: 1px solid white; }
+.container .rent-wrapper .rent-color .color-tab:hover { opacity: 0.7; }
+.container .rent-wrapper .rent-color .color-tab.current { border: 1px solid #2ac6ff; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color { width: 2.5rem; height: 2.5rem; border-radius: 2.5rem; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-01 { background-color: #ed2f2f; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-02 { background-color: #ff9239; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-03 { background-color: #ffff3e; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-04 { background-color: #8df953; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-05 { background-color: #73f4c5; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-06 { background-color: #119bcc; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-07 { background-color: #0014ce; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-08 { background-color: #9705db; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-09 { background-color: #fff; border: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.container .rent-wrapper .rent-color .color-tab .color-tab__color.color-10 { background-color: #2b2b2b; }
+.container .rent-wrapper .rent-result { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .rent-wrapper .rent-result .result-title { width: 100%; text-align: center; font-size: 2rem; margin-top: 3rem; margin-bottom: 3rem; color: #606060; }
+.container .rent-wrapper .rent-result .result-option { width: 100%; margin-bottom: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.container .rent-wrapper .rent-result .result-option .option { font-size: 1.15rem; line-height: 1.5; border-bottom: 1px solid #606060; color: #606060; opacity: 0.5; margin-left: 1rem; margin-right: 1rem; cursor: pointer; font-weight: 700; }
+.container .rent-wrapper .rent-result .result-option .option:hover { opacity: 0.8; }
+.container .rent-wrapper .rent-result .result-option .option.current { opacity: 1; }
+.container .rent-wrapper .rent-item-list { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.container .rent-wrapper .rent-item-list .item { width: calc(97% / 4); margin-right: 1%; position: relative; margin-bottom: 5rem; }
+.container .rent-wrapper .rent-item-list .item:nth-of-type(4n) { margin-right: 0; }
+.container .rent-wrapper .rent-item-list .item .item-img { width: 100%; height: 30rem; border: 1px solid #a5a5a5; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; position: relative; overflow: hidden; }
+.container .rent-wrapper .rent-item-list .item .item-img:hover .item-img__quickmenu { bottom: 0; }
+.container .rent-wrapper .rent-item-list .item .item-img img { height: 85%; width: auto; position: absolute; top: 7.5%; }
+.container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu { width: 100%; position: absolute; bottom: -4rem; display: -webkit-box; display: -ms-flexbox; display: flex; font-family: 'NanumSquare', sans-serif; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab { width: 50%; height: 4rem; font-size: 1.35rem; line-height: 4rem; text-align: center; color: #2b2b2b; background-color: #f7ff5a; border-right: 1px solid white; cursor: pointer; }
+.container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab:hover { font-weight: 800; }
+.container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab:nth-of-type(2) { border-right: none; }
+.container .rent-wrapper .rent-item-list .item .item-info { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-title { font-size: 1.35rem; font-weight: 700; text-align: center; width: 80%; word-break: keep-all; margin-top: 2.5rem; margin-bottom: 1rem; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-spec { width: 30%; display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 0.4rem; color: #a5a5a5; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__unit { width: 50%; font-size: 1.15rem; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__value { width: 50%; font-size: 1.15rem; }
+.container .rent-wrapper .rent-more { width: 100%; text-align: center; }
+.container .rent-wrapper .rent-more span { font-size: 1.35rem; color: #2ac6ff; padding: 1rem 4rem; border: 1px solid #2ac6ff; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .rent-wrapper .rent-more span:hover { background-color: #2ac6ff; color: white; }
+
+.shopbag { width: 5rem; height: 15rem; background-color: #f7ff5a; position: fixed; top: 20%; right: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.shopbag.active { width: 20rem; -webkit-transform-origin: top right; -ms-transform-origin: top right; transform-origin: top right; }
+.shopbag.active .shopbag-cont { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.shopbag.active .shopbag-cont .shopbag-text span { -webkit-animation: shopbag-letter 1s ease; animation: shopbag-letter 1s ease; }
+.shopbag .shopbag-cont { display: none; width: 15rem; height: 10rem; margin-top: 3rem; margin-left: 3rem; position: absolute; top: 0; left: 0; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+.shopbag .shopbag-cont .shopbag-text { width: 100%; }
+.shopbag .shopbag-cont .shopbag-text span { font-size: 2rem; line-height: 1.5; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; }
+.shopbag .shopbag-icon { width: 5rem; height: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; position: absolute; bottom: 0; right: 0; }
+.shopbag .shopbag-icon img { width: 3rem; height: auto; }
 
 /*# sourceMappingURL=rent.css.map */
