--- a/stylesheets/base/_variable.scss
+++ b/stylesheets/base/_variable.scss
@@ -4,3 +4,6 @@ $margin-side: 170px;
 $gnb-height: 85px;
 
 $grid-1: 99.87% / 6;
+
+$gnb-height-sticky : 60px;
+$gnb-white: rgba(255, 255, 255, 0.9);
