--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -83,7 +83,7 @@ body { width: 100%; overflow-x: hidden; }
 .shopbag .shopbag-cont { display: none; width: 15rem; height: 10rem; margin-top: 3rem; margin-left: 3rem; position: absolute; top: 0; left: 0; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
 .shopbag .shopbag-cont .shopbag-text { width: 100%; }
 .shopbag .shopbag-cont .shopbag-text span { font-size: 2rem; line-height: 1.5; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; }
-.shopbag .shopbag-icon { width: 5rem; height: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; position: absolute; bottom: 0; right: 0; }
+.shopbag .shopbag-icon { width: 5rem; height: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; position: absolute; bottom: 0; right: 0; cursor: pointer; }
 .shopbag .shopbag-icon img { width: 3rem; height: auto; }
 
 /*# sourceMappingURL=rent.css.map */
