--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -8,8 +8,11 @@ body { width: 100%; overflow-x: hidden; }
 .header { width: 100%; position: relative; }
 .header .gnb { width: 100%; height: 85px; background-color: white; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .gnb.sticky { height: 60px; background-color: rgba(255, 255, 255, 0.9); position: fixed; top: -60px; -webkit-transform: translateY(60px); -ms-transform: translateY(60px); transform: translateY(60px); -webkit-transition: transform 0.5s ease, background-color 0.5s ease; -o-transition: transform 0.5s ease, background-color 0.5s ease; transition: transform 0.5s ease, background-color 0.5s ease; z-index: 9998; }
-.header .gnb .gnb-list { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; margin-left: 85px; width: calc(((100% - 170px) / 6)*5); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: flex-end; -ms-flex-pack: flex-end; justify-content: flex-end; }
-.header .gnb .gnb-list .gnb-tab { width: 20%; height: 100%; background-color: transparent; }
+.header .gnb .gnb-list { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; margin-left: 85px; width: calc(((100% - 170px) / 6)*5); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
+.header .gnb .gnb-list .gnb-tab { width: 20%; height: 100%; background-color: transparent; position: relative; }
+.header .gnb .gnb-list .gnb-tab:nth-of-type(1) { position: absolute; top: 0; right: 40%; }
+.header .gnb .gnb-list .gnb-tab:nth-of-type(2) { position: absolute; top: 0; right: 20%; }
+.header .gnb .gnb-list .gnb-tab:nth-of-type(3) { position: absolute; top: 0; right: 0; }
 .header .gnb .gnb-list .gnb-tab.current { background-color: #2ac6ff; }
 .header .gnb .gnb-list .gnb-tab.current a span { color: white; }
 .header .gnb .gnb-list .gnb-tab a { width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-text-decoration: none; text-decoration: none; }
@@ -18,7 +21,7 @@ body { width: 100%; overflow-x: hidden; }
 .header .gnb .wave-tab a { width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-text-decoration: none; text-decoration: none; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .gnb .wave-tab a:hover { background-color: #606060; }
 .header .gnb .wave-tab a span { color: white; font-family: 'NanumSquare', sans-serif; font-weight: 800; font-size: 1.35rem; letter-spacing: 0.1rem; }
-.header .gnb .wave-tab a img { height: 1.6rem; width: auto; margin-left: 7px; }
+.header .gnb .wave-tab a img { height: 2rem; width: auto; margin-left: 7px; }
 .header .nav-mobile { display: none; }
 .header .logo { position: absolute; background: #fffaa7; background: -moz-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: -webkit-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); width: 11vw; height: 170px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; top: 0; left: 85px; z-index: 9999; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .logo.sticky { height: 60px; position: fixed; top: -60px; -webkit-transform: translateY(60px); -ms-transform: translateY(60px); transform: translateY(60px); -webkit-transition: transform 0.5s ease, background-color 0.5s ease; -o-transition: transform 0.5s ease, background-color 0.5s ease; transition: transform 0.5s ease, background-color 0.5s ease; }
