--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -35,11 +35,27 @@ body {
 			width: calc(((100% - 170px) / 6)*5);
 			height: 100%;
 			@include flexbox();
-			@include justify-content(flex-end);
+			position: relative;
 			.gnb-tab {
 				width: 20%;
 				height: 100%;
 				background-color: transparent;
+				position: relative;
+				&:nth-of-type(1){
+					position: absolute;
+					top: 0;
+					right: 40%;
+				}
+				&:nth-of-type(2){
+					position: absolute;
+					top: 0;
+					right: 20%;
+				}
+				&:nth-of-type(3){
+					position: absolute;
+					top: 0;
+					right: 0;
+				}
 				&.current {
 					background-color: $blue;
 					a {
@@ -88,7 +104,7 @@ body {
 					letter-spacing: 0.1rem;
 				}
 				img {
-					height: 1.6rem;
+					height: 2rem;
 					width: auto;
 					margin-left: 7px;
 				}
