--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -388,7 +388,7 @@ body {
 		}
 		.gallery-wrapper {
 			width: 100%;
-			height: 17rem;
+			height: 20rem;
 			padding: 0 10%;
 			@include box-sizing(border-box);
 			background: url('../../images/index/section3-bg.jpg') no-repeat center top;
@@ -464,10 +464,11 @@ body {
 					width: 100%;
 					height: 25%;
 					@include flexbox();
-					@include justify-content(center);
-					@include align-items(center);
+					//@include justify-content(center);
+					//@include align-items(center);
 					cursor: pointer;
 					@include box-sizing(border-box);
+					padding-left: 28%;
 					border-top: 1px solid $gray2;
 					background-color: transparent;
 					@include transition(all 0.5s ease);
@@ -475,9 +476,10 @@ body {
 						border-top: none;
 					}
 					.nav-tab__icon {
-						height: 4rem;
-						width: auto;
+						height: 40%;
+						width: 20%;
 						position: relative;
+						margin-top: 15%;
 						.tab-icon__off {
 							height: 100%;
 							position: relative;
@@ -501,6 +503,8 @@ body {
 						font-weight: 700;
 						font-family: 'NanumSquare', sans-serif;
 						@include transition(all 0.5s ease);
+						width: 80%;
+						margin-top: 24%;
 					}
 					&.current {
 						background-color: $yellow;
