--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -122,6 +122,8 @@ html { font-size: 12px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoot
 
 body { width: 100%; overflow-x: hidden; }
 
+.og { width: 0; height: 0; display: none; }
+
 .visual { width: 100%; height: calc(100vh - 85px); overflow: hidden; position: relative; }
 .visual .visual-container { width: 100%; height: 100%; position: relative; }
 .visual .visual-container .visual-slide { display: none; width: 100%; height: 100%; position: relative; }
