--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -14,6 +14,11 @@ body {
 	width: 100%;
 	overflow-x: hidden;
 }
+.og {
+	width: 0;
+	height: 0;
+	display: none;
+}
 .visual {
 	width: 100%;
 	height: calc(100vh - 85px);
