--- a/stylesheets/base/_keyframes.scss
+++ b/stylesheets/base/_keyframes.scss
@@ -96,6 +96,35 @@
   100% { transform:translate(0,0); opacity: 1; }
 }
 
+@-webkit-keyframes title-line {
+  0%   { height: 0; opacity: 1;  }
+  100% { height: 8rem; opacity: 1; }
+}
+@-moz-keyframes title-line {
+  0%   { height: 0; opacity: 1;  }
+  100% { height: 8rem; opacity: 1; }
+}
+@keyframes title-line {
+  0%   { height: 0; opacity: 1;  }
+  100% { height: 8rem; opacity: 1; }
+}
+
+@-webkit-keyframes title {
+  0%   { -webkit-transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,0); opacity: 1; }
+}
+@-moz-keyframes title {
+  0%   { -moz-transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,0); opacity: 1; }
+}
+@keyframes title {
+  0%   { transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,0); opacity: 1; }
+}
+
 @-webkit-keyframes class-type {
   0%   { -webkit-transform:translate(0,20px); opacity: 0;  }
   50%  { opacity: 1;  }
