--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -55,6 +55,21 @@
 @keyframes letter-appear { 0% { transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@-moz-keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@-webkit-keyframes title { 0% { -webkit-transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes title { 0% { -moz-transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes title { 0% { transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
 @-webkit-keyframes class-type { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
@@ -134,8 +149,8 @@ body { width: 100%; overflow-x: hidden; }
 .visual .visual-container .visual-slide.current .slide-main .slide-main__cont .cont-btn { -webkit-animation: letter-appear 1.5s ease; animation: letter-appear 1.5s ease; opacity: 1; }
 .visual .visual-container .visual-slide.current .slide-sub img { -webkit-animation: slide-sub-appear 1s ease; animation: slide-sub-appear 1s ease; }
 .visual .visual-container .visual-slide .slide-main { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: calc(((100% - 170px) / 6)*5 + 85px); height: 100%; position: relative; }
-.visual .visual-container .visual-slide .slide-main .slide-main__bg { width: 100%; height: 100%; position: relative; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.visual .visual-container .visual-slide .slide-main .slide-main__bg img { height: 120%; position: absolute; right: 0; }
+.visual .visual-container .visual-slide .slide-main .slide-main__bg { width: 100%; height: 100%; position: relative; overflow: hidden; display: inline-block; }
+.visual .visual-container .visual-slide .slide-main .slide-main__bg img { height: 120%; position: absolute; right: 0; top: -10%; }
 .visual .visual-container .visual-slide .slide-main .slide-main__cont { width: 50%; height: 100%; background: #141414; background: -moz-linear-gradient(270deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.4) 100%); background: -webkit-linear-gradient(270deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.4) 100%); background: linear-gradient(270deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.4) 100%); position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; font-family: 'NanumSquare', sans-serif; }
 .visual .visual-container .visual-slide .slide-main .slide-main__cont .cont-title { color: white; font-size: 4.2rem; margin-left: 85px; margin-top: 6rem; -webkit-animation: letter-appear 1.5s ease; animation: letter-appear 1.5s ease; }
 .visual .visual-container .visual-slide .slide-main .slide-main__cont .cont-desc { color: white; font-size: 1.35rem; margin-left: 85px; margin-top: 2.2rem; font-weight: 300; -webkit-animation: letter-appear 1.5s ease; animation: letter-appear 1.5s ease; }
@@ -157,8 +172,10 @@ body { width: 100%; overflow-x: hidden; }
 
 .container { width: 100%; position: relative; margin-top: 5rem; }
 .container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .container-title .title-line { width: 1px; height: 8rem; background-color: #2b2b2b; }
-.container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; }
+.container .container-title .title-line { width: 1px; height: 0; background-color: #2b2b2b; opacity: 0; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title-line.appear { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
+.container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title.appear { -webkit-animation: title 1s ease; animation: title 1s ease; opacity: 1; }
 .container .container-content { width: 100%; }
 .container .container-content .class-warpper { width: 100%; padding: 0 10%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; }
 .container .container-content .class-warpper .class-type { width: 32.5%; font-family: 'NanumSquare', sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; opacity: 0; }
@@ -199,8 +216,8 @@ body { width: 100%; overflow-x: hidden; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab:nth-of-type(1) { border-top: none; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__icon { height: 40%; width: 20%; position: relative; margin-top: 15%; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__icon .tab-icon__off { height: 100%; position: relative; opacity: 1; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__icon .tab-icon__on { height: 100%; position: absolute; top: 0; left: 0; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__name { font-size: 1.35rem; line-height: 1rem; margin-left: 2rem; color: white; font-weight: 700; font-family: 'NanumSquare', sans-serif; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; width: 80%; margin-top: 24%; }
+.container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__icon .tab-icon__on { height: 100%; position: absolute; top: 0; left: 0; opacity: 0; z-index: 2; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab .nav-tab__name { margin-top: 23%; font-size: 1.35rem; line-height: 1; color: white; font-weight: 700; font-family: 'NanumSquare', sans-serif; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; width: 80%; height: 40%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 2.5rem; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab.current { background-color: #f7ff5a; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab.current .nav-tab__icon .tab-icon__off { opacity: 0; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab.current .nav-tab__icon .tab-icon__on { opacity: 1; }
