--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -55,6 +55,48 @@
 @keyframes letter-appear { 0% { transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@-moz-keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@keyframes title-line { 0% { height: 0; opacity: 1; }
+  100% { height: 8rem; opacity: 1; } }
+@-webkit-keyframes title { 0% { -webkit-transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes title { 0% { -moz-transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes title { 0% { transform: translate(0, -20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes class-type { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes class-type { 0% { -moz-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes class-type { 0% { transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes location-ltr { 0% { -webkit-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes location-ltr { 0% { -moz-transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes location-ltr { 0% { transform: translate(-20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes location-rtl { 0% { -webkit-transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes location-rtl { 0% { -moz-transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes location-rtl { 0% { transform: translate(20px, 0); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
 @-webkit-keyframes rental-slide { 0% { opacity: 0; }
   100% { opacity: 1; } }
 @-moz-keyframes rental-slide { 0% { opacity: 0; }
@@ -70,6 +112,27 @@
 @keyframes rental-slide-letter { 0% { transform: translate(-20px, 0); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes icon-effect { 0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; } }
+@-moz-keyframes icon-effect { 0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; } }
+@keyframes icon-effect { 0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; } }
+@-webkit-keyframes shopbag-letter { 0% { -webkit-transform: translate(0, 100%); }
+  100% { -webkit-transform: translate(0, 0); } }
+@-moz-keyframes shopbag-letter { 0% { -moz-transform: translate(0, 100%); }
+  100% { -moz-transform: translate(0, 0); } }
+@keyframes shopbag-letter { 0% { transform: translate(0, 100%); }
+  100% { transform: translate(0, 0); } }
+@-webkit-keyframes gnb-sticky { 0% { top: -60px; }
+  100% { top: 0; } }
+@-moz-keyframes gnb-sticky { 0% { top: -60px; }
+  100% { top: 0; } }
+@keyframes gnb-sticky { 0% { top: -60px; }
+  100% { top: 0; } }
 html { font-size: 12px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; text-rendering: optimizeLegibility; }
 
 body { width: 100%; overflow-x: hidden; }
@@ -87,8 +150,10 @@ body { width: 100%; overflow-x: hidden; }
 
 .container { width: 100%; position: relative; margin-top: 5rem; }
 .container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .container-title .title-line { width: 1px; height: 8rem; background-color: #2b2b2b; }
-.container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; }
+.container .container-title .title-line { width: 1px; height: 0; background-color: #2b2b2b; opacity: 0; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title-line.appear { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
+.container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title.appear { -webkit-animation: title 1s ease; animation: title 1s ease; opacity: 1; }
 .container .container-title .description { text-align: center; width: 40%; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; font-size: 1.2rem; line-height: 1.8; word-break: keep-all; }
 .container .container-title .button { margin-top: 2.5rem; background-color: #f7ff5a; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.6rem; line-height: 1; font-weight: 700; padding: 1.5rem 5rem; border-radius: 5rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .container .container-title .button:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
@@ -110,8 +175,9 @@ body { width: 100%; overflow-x: hidden; }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text { -webkit-transform: translate(2rem, 0); -ms-transform: translate(2rem, 0); transform: translate(2rem, 0); text-align: right; }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text .desc-text__desc { margin-left: 20%; }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(3) { -webkit-transform: translate(0, -8rem); -ms-transform: translate(0, -8rem); transform: translate(0, -8rem); }
-.container .container-content .introduce-wrapper .introduce-part .introduce-part__img { width: calc((100% / 6) * 4); height: 40rem; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__img { width: calc((100% / 6) * 4); height: 40rem; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: relative; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__img img { width: 100%; }
+.container .container-content .introduce-wrapper .introduce-part .introduce-part__img span { position: absolute; top: 0; font-size: 8rem; font-family: 'TmonMonsori'; color: #f7ff5a; z-index: 2; text-align: center; width: 100%; margin-top: 23%; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc { width: calc((100% / 6) * 2); height: 40rem; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg { position: relative; width: 50%; height: 20rem; background-color: #f7ff5a; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text { width: 100%; position: absolute; top: 0; left: 0; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; -webkit-transform: translate(-2rem, 0); -ms-transform: translate(-2rem, 0); transform: translate(-2rem, 0); }
