--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -137,7 +137,7 @@ body {
 			.logo-symbol {
 				height: 100%;
 				img {
-					margin-top: unset;
+					margin-top: 9%;
 				}
 			}
 			.logo-title {
@@ -153,12 +153,12 @@ body {
 			width: 100%;
 			height: 50%;
 			@include flexbox();
-			@include justify-content(center);
-			@include align-items(center);
 			@include transition(all 0.5s ease);
 			img {
 				width: 48%;
+				height: 48%;
 				margin-top: 20%;
+				margin-left: 26%;
 				@include transition(all 0.5s ease);
 			}
 		}
@@ -171,6 +171,7 @@ body {
 			@include transition(all 0.5s ease);
 			img {
 				width: 48%;
+				height: 48%;
 				margin-bottom: 20%;
 				@include transition(all 0.5s ease);
 			}
