--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -79,12 +79,14 @@ body {
 					height: 100%;
 					position: relative;
 					overflow: hidden;
-					@include flexbox();
-					@include align-items(center);
+					display: inline-block;
+					//@include flexbox();
+					//@include align-items(center);
 					img {
 						height: 120%;
 						position: absolute;
 						right: 0;
+						top: -10%;
 					}
 				}
 				.slide-main__cont {
@@ -237,8 +239,16 @@ body {
 		@include align-items(center);
 		.title-line {
 			width: 1px;
-			height: 8rem;
+			height: 0;
 			background-color: $gray1;
+			opacity: 0;
+			@include transform-origin(center top);
+			@include transition(all 0.5s ease);
+			&.appear {
+				@include animation(title-line 0.5s ease);
+				opacity: 1;
+				height: 8rem;
+			}
 		}
 		.title {
 			font-family: 'TmonMonsori';
@@ -248,6 +258,12 @@ body {
 			text-align: center;
 			margin-bottom: 5rem;
 			color: $font-white;
+			opacity: 0;
+			@include transition(all 0.5s ease);
+			&.appear {
+				@include animation(title 1s ease);
+				opacity: 1;
+			}
 		}
 	}
 	.container-content {
@@ -467,7 +483,7 @@ body {
 				left: 0;
 				.slide-nav__tab {
 					width: 100%;
-					height: 25%;
+					height: 25%;					
 					@include flexbox();
 					//@include justify-content(center);
 					//@include align-items(center);
@@ -497,19 +513,22 @@ body {
 							top: 0;
 							left: 0;
 							opacity: 0;
+							z-index: 2;
 							@include transition(all 0.5s ease);
 						}
 					}
 					.nav-tab__name {
+						margin-top: 23%;
 						font-size: 1.35rem;
-						line-height: 1rem;
-						margin-left: 2rem;
+						line-height: 1;
 						color: $font-white;
 						font-weight: 700;
 						font-family: 'NanumSquare', sans-serif;
 						@include transition(all 0.5s ease);
 						width: 80%;
-						margin-top: 24%;
+						height: 40%;
+						@include box-sizing(border-box);
+						padding-left: 2.5rem;
 					}
 					&.current {
 						background-color: $yellow;
